# xaynet

./: .clang-format  .dockerignore  .editorconfig  .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .isort.cfg  .pylintrc  .readthedocs.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  README.tpl  RELEASE_PROCESS.md  ROADMAP.md  conftest.py  dev.dockerfile  docker-compose-dev.yml  docker-compose.yml  mypy.ini  pants.ini  pylint.ini  pytest.ini  requirements.txt  setup.py  shell.nix  test_array.npy
bindings/python/: .gitignore  .isort.cfg  .pylintrc  Cargo.toml  README.md  migration_guide.md
bindings/python/examples/: README.md  download_global_model.py  download_global_model_async.py  hello_world.py  hello_world_async.py  multiple_participants.py  participate_in_update.py  restore.py
bindings/python/examples/keras_house_prices/: README.md  setup.py
bindings/python/src/: lib.rs  python_ffi.rs
bindings/python/xaynet_sdk/: __init__.py  async_participant.py  participant.py
rust/: .gitignore  Cargo.toml  README.md  rust-toolchain  rustfmt.toml  test
rust/.cargo/: config.toml
rust/benches/: Cargo.toml  main.rs
rust/benches/benches/models/: parse_models.rs  serialize_models.rs  utils.rs
rust/benches/messages/: messages.rs  sum.rs  update.rs  utils.rs
rust/benches/models/: from_primitives.rs  mod.rs  parse_models.rs  serialize_models.rs  to_primitives.rs  utils.rs
rust/e2e/: .gitignore  Cargo.toml
rust/e2e/src/: lib.rs
rust/e2e/src/test_client/: builder.rs  mod.rs  runner.rs  utils.rs
rust/e2e/src/test_env/: environment.rs  influx.rs  k8s.rs  mod.rs  utils.rs
rust/e2e/src/utils/: concurrent_futures.rs  mod.rs  terminal.rs
rust/examples/: Cargo.toml  mobile-client.rs  test-drive-net.rs
rust/examples/spec-drive/: main.rs  participant.rs
rust/examples/test-drive/: main.rs  participant.rs  settings.rs
rust/grpc-api/: Cargo.toml
rust/grpc-api/certs/: ca-key.pem  client.key  server.key
rust/grpc-api/src/: lib.rs  logging.rs
rust/grpc-api/src/services/: coordinator.rs  mod.rs  numprotoservice.rs
rust/src/: certificate.rs  client.rs  common.rs  coordinator.rs  coordinator_async.rs  events.rs  examples.rs  lib.rs  macros.rs  message_processing.rs  model.rs  participant.rs  request.rs  rest.rs  service.rs  settings.rs  utils.rs
rust/src/aggregator/: api.rs  mod.rs  py_aggregator.rs  rpc.rs  service.rs  settings.rs
rust/src/client/: client.rs  mobile_client.rs  mod.rs  participant.rs  request.rs
rust/src/client/api/: http.rs  in_memory.rs  mod.rs
rust/src/client/mobile_client/: client.rs  mod.rs
rust/src/client/participant_/: mod.rs  sum.rs  undefined.rs
rust/src/common/: client.rs  logging.rs  mod.rs  recover_service.rs  service_recovery.rs  settings.rs  state.rs  sync.rs
rust/src/common/metric_store/: influxdb.rs
rust/src/coordinator/: api.rs  models.rs  rpc.rs  settings.rs
rust/src/coordinator/core/: client.rs  heartbeat.rs  mod.rs  protocol.rs  service.rs
rust/src/coordinator_async/: error.rs  idle.rs  message.rs  message_processing.rs  mod.rs  sum.rs  sum2.rs  update.rs
rust/src/coordinator_async/redis/: mod.rs  store.rs
rust/src/coordinator_async/store/: client.rs  mod.rs
rust/src/crypto/: encrypt.rs  hash.rs  mod.rs  prng.rs  sign.rs
rust/src/mask/: config.rs  masking.rs  mod.rs  model.rs  seed.rs
rust/src/mask/config/: mod.rs  serialization.rs
rust/src/mask/object/: mod.rs  serialization.rs
rust/src/message/: buffer.rs  header.rs  message.rs  mod.rs  round.rs  sum.rs  sum2.rs  traits.rs  update.rs  utils.rs
rust/src/metric_store/: metric_store.rs
rust/src/metrics/: mod.rs  models.rs
rust/src/pet/: compose.rs  coordinator.rs  mod.rs  participant.rs  utils.rs
rust/src/proxy/: mod.rs  models.rs
rust/src/sdk/: api.rs  api_sync.rs  mobile_api.rs  mod.rs
rust/src/service/: data.rs  handle.rs  mod.rs
rust/src/services/: error.rs  message_parser.rs  mod.rs  seed_dict.rs  state_machine.rs  sum_dict.rs  utils.rs
rust/src/state_machine/: coordinator.rs  error.rs  events.rs  idle.rs  mod.rs  requests.rs  shutdown.rs  sum.rs  sum2.rs  tests.rs  unmask.rs  update.rs
rust/src/storage/: error.rs  file.rs  impls.rs  mod.rs  serde.rs  state.rs  store.rs
rust/src/tests/: aggregator.rs  coordinator.rs  mod.rs
rust/src/utils/: mod.rs  trace.rs
rust/xain-coordinator/: Cargo.toml
rust/xain-coordinator/src/: aggregation.rs  lib.rs  main.rs  training.rs
rust/xain-coordinator/tests/: cli.rs
rust/xain-grpc/: Cargo.toml  README.md  generate-proto-bindings.sh  generate-testing-certs.sh  generate.sh
rust/xain-grpc-api/: Cargo.toml
rust/xain-grpc-api/certs/: ca.cer  client.cer
rust/xain-grpc-api/src/: lib.rs  training_task.rs
rust/xain-grpc/certs/: server.cer
rust/xain-grpc/src/: lib.rs  training_task.rs
rust/xain-proto/: Cargo.toml  generate.sh
rust/xain-proto/src/: coordinator.rs  coordinator_grpc.rs  hellonumproto.rs  hellonumproto_grpc.rs  ndarray.rs
rust/xaynet/: Cargo.toml
rust/xaynet-analytics/: Cargo.toml
rust/xaynet-analytics/src/: controller.rs  lib.rs  sender.rs
rust/xaynet-client/: Cargo.toml
rust/xaynet-client/src/: lib.rs  participant.rs
rust/xaynet-core/: Cargo.toml
rust/xaynet-core/benches/: messages.rs
rust/xaynet-core/src/: certificate.rs  common.rs  lib.rs
rust/xaynet-ffi/: .gitignore  Cargo.toml  README.md  cbindgen.toml  xaynet_ffi.h
rust/xaynet-ffi/.cargo/: config.toml
rust/xaynet-ffi/src/: lib.rs
rust/xaynet-ffi/tests/: ffi_test.c  minunit.h
rust/xaynet-macros/: Cargo.toml
rust/xaynet-macros/src/: lib.rs
rust/xaynet-mobile/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  xaynet_ffi.h
rust/xaynet-mobile/.cargo/: config.toml
rust/xaynet-mobile/src/: lib.rs  participant.rs  reqwest_client.rs  settings.rs
rust/xaynet-mobile/tests/: ffi_test.c  minunit.h
rust/xaynet-sdk/: Cargo.toml
rust/xaynet-sdk/src/: client.rs  lib.rs  preprocessor.rs  traits.rs
rust/xaynet-server/: Cargo.toml
rust/xaynet-server/src/: examples.rs  lib.rs  rest.rs  settings.rs
rust/xaynet/src/: lib.rs
(+1122 files in other folders)
