[package]
name = "xain-coordinator"
version = "0.1.0"
authors = ["little-dude <corentinhenry@gmail.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
log = "0.4.8"
futures = "0.3.2"
tokio = { version = "0.2.11", features = ["full"] }
warp = "0.2.1"
derive_more = { version = "0.99.2", default-features = false, features = ["display"] }
