[package]
name = "xain-fl"
version = "0.1.0"
authors = ["little-dude <corentinhenry@gmail.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.8.1", features = ["v4", "serde"] }
log = "0.4.8"
futures = "0.3.4"
tokio = { version = "0.2.11", features = ["full"] }
warp = "0.2.1"
derive_more = { version = "0.99.2", default-features = false, features = [ "display", "from" ] }
rand = "0.7.3"
env_logger = "0.7.1"
tarpc = { version = "0.20.0", features = [ "full" ] }
serde = { version = "1.0.104", features = [ "derive" ] }
pyo3 = "0.9.0-alpha.1"
async-trait = "0.1.24"
tokio-serde = { version = "0.6.0", features = [ "json" ] }
futures-retry = "0.4.0"
stubborn-io = "0.1.8"
bytes = "0.5.4"
config = "0.10.1"
clap = "2.33.0"
influent = "0.5.2"

[[bin]]
name = "coordinator"
path = "src/bin/coordinator.rs"

[[bin]]
name = "aggregator"
path = "src/bin/aggregator.rs"
