[package]
name = "xain-fl"
version = "0.8.0"
authors = ["XAIN AG <engineering@xain.io>"]
edition = "2018"
description = "The XAIN project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
license-file = "../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
repository = "https://github.com/xainag/xain-fl/"
homepage = "https://xain.io/"

[dependencies]
futures = "0.3.4"
tokio = { version = "0.2.19", features = ["rt-core", "rt-threaded", "tcp", "time", "macros", "signal", "sync", "stream"] }
derive_more = { version = "0.99.3", default-features = false, features = [ "display", "from" , "as_ref", "as_mut", "into", "index", "index_mut"] }
rand = "0.7.3"
rand_chacha = "0.2.2"
serde = { version = "1.0.104", features = [ "derive" ] }
bytes = "0.5.4"
tracing = "0.1.13"
sodiumoxide = "0.2.5"
num = { version = "0.2.1", features = ["serde"] }
bincode = "1.2.1"
thiserror = "1.0.16"
anyhow = "1.0.28"
bitflags = "1.2.1"
paste = "0.1.12"
tracing-subscriber = "0.2.5"
warp = "0.2.3"
reqwest = "0.10.6"

[[bin]]
name = "coordinator"
path = "src/bin/main.rs"

[features]
default = []
