[package]
name = "xaynet"
version = "0.8.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "The Xayn Network project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
license-file = "../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
repository = "https://github.com/xaynetwork/xaynet/"
homepage = "https://xaynet.dev/"

[dependencies]
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["rt-core", "rt-threaded", "tcp", "time", "macros", "signal", "sync", "stream"] }
derive_more = { version = "0.99.7", default-features = false, features = [ "display", "from" , "as_ref", "as_mut", "into", "index", "index_mut"] }
rand = "0.7.3"
rand_chacha = "0.2.2"
serde = { version = "1.0.111", features = [ "derive" ] }
bytes = "0.5.4"
sodiumoxide = "0.2.5"
num = { version = "0.3.0", features = ["serde"] }
bincode = "1.2.1"
thiserror = "1.0.19"
anyhow = "1.0.31"
bitflags = "1.2.1"
warp = "0.2.3"
reqwest = "0.10.6"
config = "0.10.1"
validator = "0.10"
validator_derive = "0.10"
structopt = "0.3"
paste = "0.1.15"
tokio-tower = "0.4.0"
tower = "0.3.1"
tracing-futures = { git = "https://github.com/tokio-rs/tracing", version = "0.2" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", version = "0.2" }
tracing = { git = "https://github.com/tokio-rs/tracing", version = "0.1" }
tracing-tower = { git = "https://github.com/tokio-rs/tracing", version = "0.1", features = ["tower-layer", "tower-make"] }
uuid = { version = "0.8.1", features = ["v4"]}
rayon = "1.3.0"
async-trait = "0.1.35"

[dev-dependencies]
tower-test = "0.3.0"
tokio-test = "0.2.1"

[[bin]]
name = "coordinator"
path = "src/bin/main.rs"

[features]
default = []
