[package]
name = "xaynet-sdk-python"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "The Xayn Network project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
readme = "README.md"
homepage = "https://xaynet.dev/"
repository = "https://github.com/xaynetwork/xaynet/"
license = "Apache-2.0"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "cryptography"]

[package.metadata.maturin]
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Application Frameworks",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.6"
requires-dist = [
    "justbackoff (==0.6.0)",
]

[package.metadata]
# minimum supported rust version
msrv = "1.51.0"

[dependencies]
sodiumoxide = "0.2.7"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
pyo3 = {version = "=0.13.2", features = ["abi3-py36", "extension-module"]}
xaynet-core = { path = "../../rust/xaynet-core", version = "0.2.0"}
xaynet-mobile = { path = "../../rust/xaynet-mobile", version = "0.1.0"}
xaynet-sdk = { path = "../../rust/xaynet-sdk", version = "0.1.0"}

[lib]
name = "xaynet_sdk"
crate-type = ["cdylib"]
