[package]
name = "benches"
version = "0.0.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "The Xayn Network project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
readme = "../../README.md"
homepage = "https://xaynet.dev/"
repository = "https://github.com/xaynetwork/xaynet/"
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "cryptography"]
publish = false

[package.metadata]
# minimum supported rust version
msrv = "1.46.0"

[dev-dependencies]
criterion = "0.3.3"
xaynet-core = { path = "../xaynet-core", features = ["testutils"] }

[[bench]]
name = "messages"
harness = false

[[bench]]
name = "parse_models"
path = "benches/models/parse_models.rs"
harness = false

[[bench]]
name = "serialize_models"
path = "benches/models/serialize_models.rs"
harness = false
