[package]
name = "benches"
version = "0.0.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "The Xayn Network project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
readme = "../../README.md"
homepage = "https://xaynet.dev/"
repository = "https://github.com/xaynetwork/xaynet/"
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "cryptography"]
publish = false

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
num = "0.4.0"
paste = "1.0.6"
xaynet-core = { path = "../xaynet-core", features = ["testutils"] }

[[bench]]
name = "sum_message"
path = "messages/sum.rs"
harness = false

[[bench]]
name = "update_message"
path = "messages/update.rs"
harness = false

[[bench]]
name = "models_from_primitives"
path = "models/from_primitives.rs"
harness = false

[[bench]]
name = "models_to_primitives"
path = "models/to_primitives.rs"
harness = false
