[package]
name = "e2e"
version = "0.0.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "End-to-end tests for Xaynet"
readme = "../../README.md"
homepage = "https://xaynet.dev/"
repository = "https://github.com/xaynetwork/xaynet/"
keywords = ["xaynet", "e2e"]
categories = ["testing"]
license-file = "../../LICENSE"
publish = false

[dependencies]
anyhow = "1.0.39"
async-trait = "0.1.48"
chrono = { version = "0.4.19" }
config = "0.11.0"
console = "0.14.1"
futures = "0.3.13"
indicatif = "0.15.0"
influxdb = { version = "0.4.0", default-features = false, features = ["h1-client", "use-serde"] }
kube = "0.51.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_19"] }
reqwest = { version = "0.11.2", default-features = false, features = ["json", "gzip", "stream"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.64" }
serde_yaml = "0.8.17"
tokio = { version = "1.4.0", features = ["full"] }
toml = "0.5.8"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
xaynet-core = { path = "../xaynet-core" }
xaynet-sdk = { path = "../xaynet-sdk", features = ["reqwest-client"] }
xaynet-server = { path = "../xaynet-server", features = ["model-persistence"] }
