[package]
name = "examples"
version = "0.0.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
publish = false
edition = "2018"
description = "The Xayn Network project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
readme = "../../README.md"
homepage = "https://xaynet.dev/"
repository = "https://github.com/xaynetwork/xaynet/"
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "cryptography"]

# https://github.com/http-rs/tide/issues/225
# https://github.com/dependabot/dependabot-core/issues/1156
autobins = false

[dev-dependencies]
async-trait = "0.1.42"
# TODO (XN-1372): can't upgrade yet because of tokio
reqwest = { version = "0.10.10", default-features = false, features = ["rustls-tls"] }
structopt = "0.3.21"
# TODO (XN-1372): upgrade
tokio = { version = "0.2.24", features = ["sync", "time", "macros", "rt-threaded", "signal"] }
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
xaynet-core = { path = "../xaynet-core" }
xaynet-sdk = { path = "../xaynet-sdk", features = ["reqwest-client"] }

[[example]]
name = "test-drive"
path = "test-drive/main.rs"
