[package]
name = "examples"
version = "0.0.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "The Xayn Network project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
readme = "../../README.md"
homepage = "https://xaynet.dev/"
repository = "https://github.com/xaynetwork/xaynet/"
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "cryptography"]
publish = false

# https://github.com/http-rs/tide/issues/225
# https://github.com/dependabot/dependabot-core/issues/1156
autobins = false

[dev-dependencies]
async-trait = "0.1.52"
reqwest = { version = "0.11.2", default-features = false, features = ["rustls-tls"] }
structopt = "0.3.26"
tokio = { version = "1.16.0", features = ["sync", "time", "macros", "rt-multi-thread", "signal"] }
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
xaynet-core = { path = "../xaynet-core" }
xaynet-sdk = { path = "../xaynet-sdk", features = ["reqwest-client"] }

[[example]]
name = "test-drive"
path = "test-drive/main.rs"
