[package]
name = "grpc-api"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.grpcio]
version = "0.5.0-alpha.4"

[dependencies]
xain-proto = { path = "../xain-proto"}
futures = "0.1"
slog = "2"
slog-async = "2"
slog-scope = "2"
slog-stdlog = "2"
slog-term = "2"
log = "0.4"
