[package]
name = "xain-grpc-api"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.grpcio]
version = "0.5.0-alpha.4"

[dependencies]
xain-proto = { path = "../xain-proto"}
xain-coordinator = { path = "../xain-coordinator" }
futures = "0.1"
slog = "2"
slog-async = "2"
slog-scope = "2"
slog-stdlog = "2"
slog-term = "2"
log = "0.4"
clap = "2"
async-std = "^ 0.99"
futures-channel-preview = "0.3.0-alpha.19"
futures-util-preview = "0.3.0-alpha.19"
ndarray = "*"
