[package]
name = "xain-grpc"
version = "0.1.0"
authors = ["The XAIN developers"]
edition = "2018"

[dependencies]
async-std = "0.99"
clap = "2"
env_logger = "0.7.0"
futures = "0.1"
futures-channel-preview = "0.3.0-alpha.19"
futures-util-preview = "0.3.0-alpha.19"
grpcio = "0.5.0-alpha.4"
log = "0.4"
ndarray = "0.12.1"
protobuf = "2.8.1"
xain-coordinator = { path = "../xain-coordinator" }
