[package]
name = "xaynet-client"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "`xaynet_client` provides an implementation of a Xayn Network client"
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
repository = "https://github.com/xaynetwork/xaynet/"
homepage = "https://xaynet.dev/"

[dependencies]
tokio = "0.2.22"
derive_more = { version = "0.99.10", default-features = false, features = ["from"] }
serde = { version = "1.0.116", features = ["derive"] }
bytes = "0.5.6"
sodiumoxide = "0.2.6"
bincode = "1.3.1"
thiserror = "1.0.20"
tracing = "0.1.19"
async-trait = "0.1.40"
xaynet-core = { path = "../xaynet-core", version = "0.1.0" }

[dependencies.reqwest]
version = "0.10.8"
default-features = false

[dev-dependencies]
tower-test = "0.3.0"
tokio-test = "0.2.1"
xaynet-server = { path = "../xaynet-server", version = "0.1.0" }

[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]
