[package]
name = "xaynet-client"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "The Xayn Network project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
readme = "../../README.md"
homepage = "https://xaynet.dev/"
repository = "https://github.com/xaynetwork/xaynet/"
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "cryptography"]

[package.metadata]
# minimum supported rust version
msrv = "1.46.0"

[dependencies]
async-trait = "0.1.40"
bincode = "1.3.1"
bytes = "0.5.6"
derive_more = { version = "0.99.10", default-features = false, features = ["from"] }
reqwest = { version = "0.10.8", default-features = false }
serde = { version = "1.0.116", features = ["derive"] }
sodiumoxide = "0.2.6"
thiserror = "1.0.20"
tokio = "0.2.22"
tracing = "0.1.19"
xaynet-core = { path = "../xaynet-core", version = "0.1.0" }

[dev-dependencies]
num = { version = "0.3.0", features = ["serde"] }
serde_json = "1.0.58"
tokio-test = "0.2.1"
tower-test = "0.3.0"
xaynet-core = { path = "../xaynet-core", version = "0.1.0", features = ["testutils"] }

[features]
default = []
tls = ["reqwest/rustls-tls"]
