[package]
name = "xaynet-core"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "The Xayn Network project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
readme = "../../README.md"
homepage = "https://xaynet.dev/"
repository = "https://github.com/xaynetwork/xaynet/"
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "cryptography"]

[package.metadata]
# minimum supported rust version
msrv = "1.46.0"

[dependencies]
anyhow = "1.0.32"
bitflags = "1.2.1"
derive_more = { version = "0.99.10", default-features = false, features = [
    "as_ref",
    "as_mut",
    "display",
    "from",
    "index",
    "index_mut",
    "into",
] }
num = { version = "0.3.0", features = ["serde"] }
paste = "1.0.1"
rand = "0.7.3"
rand_chacha = "0.2.2"
serde = { version = "1.0.116", features = ["derive"] }
sodiumoxide = "0.2.6"
thiserror = "1.0.20"

[features]
testutils = []
