[package]
name = "xaynet-ffi"
version = "0.9.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "`xaynet_ffi` provides an implementation of a Xayn Network client with C bindings."
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
repository = "https://github.com/xaynetwork/xaynet/"
homepage = "https://xaynet.dev/"

[dependencies]
ffi-support = "0.4.2"
# By default, `reqwest` uses `openssl`, but this requires compiled `openssl`
# libraries for the target systems we use.
# As a [workaround](https://github.com/bbqsrc/cargo-ndk/issues/9) we use `rustls-tls` for now.
xaynet-client = { path = "../xaynet-client", default-features = false, features = ["rustls"] }
xaynet-core = { path = "../xaynet-core" }

[lib]
name = "xaynet_sdk"
crate-type = ["staticlib", "cdylib"]
