[package]
name = "xaynet-ffi"
version = "0.0.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "`xaynet_ffi` provides an implementation of a Xayn Network client with C bindings."
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
repository = "https://github.com/xaynetwork/xaynet/"
homepage = "https://xaynet.dev/"

[dependencies]
ffi-support = "0.4.2"
xaynet-client = { path = "../xaynet-client", default-features = false, features = ["tls"], version = "0.1.0" }
xaynet-core = { path = "../xaynet-core", version = "0.1.0" }

[lib]
name = "xaynet_sdk"
crate-type = ["staticlib", "cdylib"]
