[package]
name = "xaynet-ffi"
version = "0.0.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "The Xayn Network project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
readme = "README.md"
homepage = "https://xaynet.dev/"
repository = "https://github.com/xaynetwork/xaynet/"
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "cryptography"]

[dependencies]
ffi-support = "0.4.2"
xaynet-client = { path = "../xaynet-client", default-features = false, version = "0.1.0" }
xaynet-core = { path = "../xaynet-core", version = "0.1.0" }

[lib]
name = "xaynet_sdk"
crate-type = ["staticlib", "cdylib"]

[features]
default = []
tls = ["xaynet-client/tls"]
