[package]
name = "xaynet-mobile"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "The Xayn Network project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
readme = "README.md"
homepage = "https://xaynet.dev/"
repository = "https://github.com/xaynetwork/xaynet/"
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "cryptography"]

[dependencies]
async-trait = "0.1.42"
bincode = "1.3.1"
ffi-support = "0.4.2"
futures = "0.3.12"
reqwest = { version = "0.11.0", default-features = false, features = ["rustls-tls"]}
sodiumoxide = "0.2.6"
thiserror = "1.0.23"
tracing = "0.1.23"
tokio = { version = "1.2.0", default-features = false, features = ["rt"] }
xaynet-core = { path = "../xaynet-core", version = "0.2.0" }
xaynet-sdk = { path = "../xaynet-sdk", default-features = false, version = "0.1.0", features = ["reqwest-client"]}
zeroize = "1.2.0"

[dev-dependencies]
inline-c = "0.1.5"

[lib]
name = "xaynet_mobile"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
