[package]
name = "xaynet-mobile"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "The Xayn Network project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
readme = "README.md"
homepage = "https://xaynet.dev/"
repository = "https://github.com/xaynetwork/xaynet/"
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "cryptography"]

[dependencies]
async-trait = "0.1.56"
bincode = "1.3.3"
ffi-support = "0.4.4"
futures = "0.3.21"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"]}
sodiumoxide = "0.2.7"
thiserror = "1.0.31"
tracing = "0.1.35"
tokio = { version = "1.20.0", default-features = false, features = ["rt"] }
xaynet-core = { path = "../xaynet-core", version = "0.2.0" }
xaynet-sdk = { path = "../xaynet-sdk", default-features = false, version = "0.1.0", features = ["reqwest-client"]}
zeroize = "1.5.7"

[build-dependencies]
cbindgen = "=0.17.0"

[lib]
name = "xaynet_mobile"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
