[package]
name = "xaynet-sdk"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "The Xayn Network project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
readme = "../../README.md"
homepage = "https://xaynet.dev/"
repository = "https://github.com/xaynetwork/xaynet/"
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "cryptography"]

[package.metadata."docs.rs"]
all-features = true

[dependencies]
async-trait = "0.1.42"
base64 = "0.13.0"
bincode = "1.3.1"
derive_more = { version = "0.99.11", default-features = false, features = ["from"] }
# TODO: remove once concurrent_futures.rs was moved to the e2e package
futures = "0.3.12"
paste = "1.0.4"
serde = { version = "1.0.119", features = ["derive"] }
sodiumoxide = "0.2.6"
thiserror = "1.0.23"
# TODO (XN-1372): upgrade
# TODO: move to dev-dependencies once concurrent_futures.rs was moved to the e2e package
tokio = { version = "0.2.24", features = ["rt-core", "macros"] }
tracing = "0.1.22"
url = "2.2.0"
xaynet-core = { path = "../xaynet-core", version = "0.1.0" }

# feature: reqwest client
# TODO (XN-1372): can't upgrade yet because of tokio
reqwest = { version = "0.10.10", default-features = false, optional = true }
# This has to match the version used by reqwest. It would be nice if
# reqwest just re-exported it
bytes = { version = "0.5.6", optional = true }
rand = "0.8.2"

[dev-dependencies]
mockall = "0.9.0"
num = { version = "0.3.1", features = ["serde"] }
serde_json = "1.0.61"
# TODO (XN-1372): can't upgrade yet because of tokio
tokio-test = "0.2.1"
xaynet-core = { path = "../xaynet-core", features = ["testutils"] }

[features]
default = []
reqwest-client = ["reqwest", "bytes"]
